Fix layout issue with password forms, put all templates files in same folder

--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -19,24 +19,25 @@ form ul label{
 	font-weight: bold;
 }
 
-form ul input[type=submit], form ul button, form ul input[type=button]{
+form ul {
+  input[type=submit], button, input[type=button]{
 
-  position: relative;
-  display: block;
-  padding: .5rem;
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
-  margin-bottom: 1rem;
-}
+    position: relative;
+    display: block;
+    padding: .5rem;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  input[type=text], input[type=password], textarea {
 
-form ul input[type=text], input[type=password], form ul textarea {
+    width: 100%;
 
-  width: 100%;
+    margin: 0;
 
-  margin: 0;
-
-  margin-bottom: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 form.contentForm input[type=submit], form.contentForm button, form input[type=button]{
@@ -54,41 +55,44 @@ form.contentForm input[type=submit], form.contentForm button, form input[type=bu
   vertical-align: top;
 }
 
-form input[type=text], input[type=password], form textarea {
+form {
+  input[type=text], input[type=password], textarea {
 
-  color: base.$font-color;
-  background: rgba(255,255,255,.1);
+    color: base.$font-color;
+    background: rgba(255,255,255,.1);
 
-  padding: .5rem;
-  margin: -.5rem;
+    padding: .5rem;
+    margin: -.5rem;
 
-  border: none;
-  border-radius: 4px;
-  outline: 0;
+    border: none;
+    border-radius: 4px;
+    outline: 0;
 
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-}
-
-form input[type=text]:focus, input[type=password]:focus, form textarea:focus {
-  -moz-box-shadow: 0 0 5px base.$light-highlight-color;
-  -webkit-box-shadow: 0 0 5px base.$light-highlight-color;
-  box-shadow: 0 0 5px base.$light-highlight-color;
-  border: 1px solid base.$light-highlight-color;
+    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  }
+  input[type=text]:focus, input[type=password]:focus, textarea:focus {
+    -moz-box-shadow: 0 0 5px base.$light-highlight-color;
+    -webkit-box-shadow: 0 0 5px base.$light-highlight-color;
+    box-shadow: 0 0 5px base.$light-highlight-color;
+    border: 1px solid base.$light-highlight-color;
+  }
 }
 
 .headerForm {
   display: inline;
 }
 
-form.headerForm input[type=text], input[type=password] {
-  margin-right: 1rem;
-  margin-left: 1rem;
-  margin-top: 0.65rem;
-  line-height: 1.15rem;
+form.headerForm {
+  input[type=text], input[type=password] {
+    margin-right: 1rem;
+    margin-left: 1rem;
+    margin-top: 0.65rem;
+    line-height: 1.15rem;
+  }
 }
 
